--- a/lib/libiconv_modules/Makefile.inc
+++ b/lib/libiconv_modules/Makefile.inc
@@ -8,7 +8,11 @@ CFLAGS+= -I${SRCTOP}/lib/libc/iconv
 CFLAGS+=	-Dbool=_Bool
 
 .if !defined(COMPAT_32BIT)
+.if !defined(COMPAT_64BIT)
 SHLIBDIR= /usr/lib/i18n
+.else
+SHLIBDIR= /usr/lib64/i18n
+.endif
 .else
 SHLIBDIR= /usr/lib32/i18n
 .endif
