--- a/etc/mtree/Makefile
+++ b/etc/mtree/Makefile
@@ -10,6 +10,7 @@ FILES=	\
 	BSD.include.dist \
 	BSD.root.dist \
 	${_BSD.lib32.dist} \
+	${_BSD.lib64.dist} \
 	${_BSD.sendmail.dist} \
 	${_BSD.tests.dist} \
 	BSD.usr.dist \
@@ -17,6 +18,9 @@ FILES=	\
 
 .if ${MK_LIB32} != "no"
 _BSD.lib32.dist=	BSD.lib32.dist
+.endif
+.if ${MK_LIB64} != "no"
+_BSD.lib64.dist=	BSD.lib64.dist
 .endif
 .if ${MK_SENDMAIL} != "no"
 _BSD.sendmail.dist=	BSD.sendmail.dist
