--- a/lib/geom/Makefile.classes
+++ b/lib/geom/Makefile.classes
@@ -1,7 +1,11 @@
 # $FreeBSD$
 
 .if !defined(COMPAT_32BIT)
+.if !defined(COMPAT_64BIT)
 GEOM_CLASS_DIR?=/lib/geom
+.else
+GEOM_CLASS_DIR?=/usr/lib64/geom
+.endif
 .else
 GEOM_CLASS_DIR?=/usr/lib32/geom
 .endif
