--- a/libexec/Makefile
+++ b/libexec/Makefile
@@ -85,6 +85,7 @@ _tftp-proxy=	tftp-proxy
 .if !defined(NO_PIC) && !defined(NO_RTLD)
 _rtld-elf=	rtld-elf
 SUBDIR.${MK_LIB32}+=	rtld-elf32
+SUBDIR.${MK_LIB64}+=	rtld-elf64
 .endif
 
 .if ${MK_RBOOTD} != "no"
